Resolves: fdo#69645 Parent Node disposed and mpParent pointing to junk

mpParent points the contents of mxParent which is a WeakReference, so
we can check if the WeakReference is still valid before using mpParent

Change-Id: I40424714865e506b8cf27017539795eb834e10d2